package com.example.burcuoztas.demo.dto;

public class CoffeeDto {

    private String name;
    private String including;
    private int number;
    private int price;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getIncluding() {
        return including;
    }

    public void setIncluding(String including) {
        this.including = including;
    }

    public int getNumber() {
        return number;
    }

    public void setNumber(int number) {
        this.number = number;
    }

    public int getPrice() {
        return price;
    }

    public void setPrice(int price) {
        this.price = price;
    }
}
