@startuml

title __DEMO's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.example.burcuoztas.demo {
      class com.example.burcuoztas.demo.DemoApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.burcuoztas.demo {
      namespace controller {
        class com.example.burcuoztas.demo.controller.CoffeeController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.burcuoztas.demo {
      namespace dto {
        class com.example.burcuoztas.demo.dto.CoffeeDto {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.burcuoztas.demo {
      namespace entity {
        class com.example.burcuoztas.demo.entity.Beverage {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.burcuoztas.demo {
      namespace repository {
        interface com.example.burcuoztas.demo.repository.CoffeeRepository {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.burcuoztas.demo {
      namespace service {
        interface com.example.burcuoztas.demo.service.CoffeeService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.burcuoztas.demo {
      namespace service {
        namespace impl {
          class com.example.burcuoztas.demo.service.impl.CoffeeServiceImpl {
          }
        }
      }
    }
  }
  

  com.example.burcuoztas.demo.controller.CoffeeController o-- com.example.burcuoztas.demo.service.CoffeeService : coffeeService
  com.example.burcuoztas.demo.service.impl.CoffeeServiceImpl .up.|> com.example.burcuoztas.demo.service.CoffeeService
  com.example.burcuoztas.demo.service.impl.CoffeeServiceImpl o-- com.example.burcuoztas.demo.repository.CoffeeRepository : coffeeRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
